<resources>
    <string name="app_name">Doggocity Prešov</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enter">enter</string>
    <string name="_201920">2020</string>
    <string name="o_nas">O nás</string>
    <string name="odchyt">Odchyt</string>
    <string name="oznamy">Oznamy</string>
    <string name="zoznam_psov">Zoznam psov</string>
    <string name="username">Username</string>
    <string name="konto">Konto</string>
    <string name="vyhladavanie">Vyhľadávanie</string>
    <string name="sluzby">Služby</string>
    <string name="zdielaj">Zdieľaj</string>
    <string name="log_out">Log out</string>
    <string name="sign_in">Prihlásiť sa</string>
    <string name="or">alebo</string>
    <string name="sign_up">Zaregistrovať sa</string>
    <string name="moj_pes">Môj pes</string>
    <string name="meno_psika">Meno psíka</string>
    <string name="rasa_psika">Rasa psíka</string>
    <string name="nebezpecnyano_nie">Nebezpečný: áno/nie</string>
    <string name="adresapsika">Mesto - ulica - číslo domu</string>
    <string name="pridatpoznamku">Pridať poznámku</string>
    <string name="hladam_psa">Nájdení psíci</string>
    <string name="straten_psici">Stratení psíci</string>
    <string name="popis_apky">Aplikácia má pomôcť občanom mesta Prešov a to nie len chovateľom psov ale aj tým ktorí psov nevlastnia. Pre majiteľov psov aplikácia ponúka viaceré možnosti ako napríklad dataset všetkých chovaných psov v meste, dataset s obchodmi ktoré predávajú psie maškrty, hračky ale taktiež aj kde nájdete zverolekára či útulok. Ak nájdete strateného psíka s obojkom, aplikácia umožňuje vyhľadať jeho domov a naviguje vás priamo k jemu chovateľovi. Pre psíkov bez obojkov alebo nebezpečných odporúčame zavolať odchytovú službu, ktorú v meste Prešov vykonáva mestská polícia. Zavolať im môžete priamo z appky. Samozrejme v aplikácií nesmú chýbať ani inzeráty o stratených a nájdených psíkoch.</string>
    <string name="o_zakladatelovi">Pochádzam z Vranova nad Toľou a som študentom strednej školy v Prešove. Vo voľnom čase hrám futbal alebo korčuľujem. Ak chceš vidieť čo som vytvoril tak si môžeš pozrieť moje projekty na https://github.com/lengeligor </string>
    <string name="registracia">Registrácia</string>
    <string name="meno_a_priezvisko">Meno a priezvisko:</string>
    <string name="e_mail">E-mail:</string>
    <string name="heslo">Heslo:</string>
    <string name="potvrd_heslo">Potvrď heslo:</string>
    <string name="cislo_znamky_vasho_psa">Číslo známky vášho psa:</string>
    <string name="nepovinny_daj">(Nepovinný údaj)</string>
    <string name="zaregistruj">Zaregistruj</string>
    <string name="nepokracovat_v_registracii">Nepokračovať v registrácii</string>
    <string name="prihlasenie">Prihlásenie</string>
    <string name="prihlas">Prihlás</string>
    <string name="pokracovat_bez_prihlasenia">Pokračovať bez prihlásenia</string>
    <string name="zdielaj_nas">Zdieľaj nás aj ty cez sociálne siete</string>
    <string name="zdielaj_text1">Pomôž aj ty občanom a psíkom tohto mesta a zdieľaj našu apku cez tvoje sociálne siete. Čím viac ľudí ju bude poznať, tým viac zachránených a šťastných psíkov. Záleží nám na našich psíkoch!</string>
    <string name="Tri_kroky">Sú to 3 jednoduché kroky:</string>
    <string name="krok_jeden">1. Klikni na naše tlačidlo nižšie</string>
    <string name="krok_dva">2. Vyber si apku na zdieľanie</string>
    <string name="krok_tri">3. Odošli to svojim kontaktom</string>
    <string name="ukaz_domov_psika">Ukáž domov psíka</string>
    <string name="vyhladaj_fotky_psa">Vyhľadaj fotky psa</string>
    <string name="search_string">Číslo známky:</string>
    <string name="search_text1">Počet nájdených psov:</string>
    <string name="default_value">0</string>
    <string name="creators">Tvorca Doggocity Prešov</string>
    <string name="igor_lengel">Igor Lengel</string>
    <string name="Katarina_Istonova">Katarína Ištoňová</string>
    <string name="mestsk_policia">Mestská polícia</string>
    <string name="call_text">Mestská polícia vykonáva pre občanov aj služby v oblasti odchytu túlavých zvierat , ktoré sú potom umiestňované do karanténnej stanice na Bajkalskej ulici v Prešove. V prípade, že uvidíte túlavé zviera a jeho osud Vám nie je ľahostajný, oznámte im to. Odchyt sa vykonáva výlučne v katastri mesta Prešov a na základe zmluvy o spolupráci s obcou Ľubotice aj v katastri uvedenej obce.</string>
    <string name="zavolat">Zavolať</string>
    <string name="vyber_si_obrazok">Vyber si obrázok</string>
    <string name="potvrdit">Potvrdiť</string>
    <string name="ty">Ty</string>
    <string name="domov_psika">Domov psíka</string>
    <string name="zverolekar">Zverolekár</string>
    <string name="utulok">Útulok</string>
    <string name="obchod_so_zv_pot">Obchod so zv. pot.</string>
    <string name="zaznamy_psa">Záznamy psa</string>
    <string name="save">Uložiť</string>
    <string name="hintRecord">Tu si môžeš zapisovať údaje o tvojom psovi..</string>
    <string name="stratil_som_psika">Stratil som psíka</string>
    <string name="nasiel_som_psika">Našiel som psíka</string>
    <string name="telefonny_kontakt">Telefónny kontakt:</string>
    <string name="organizacia">Organizácia:</string>
    <string name="iadame_o_pomoc">Žiadame o pomoc</string>
</resources>
