<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_Rlayout_all">

    <TextView
        android:id="@+id/name_of_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/konto"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/righteous"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        />


    <TextView
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:fontFamily="@font/righteous"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:layout_alignLeft="@id/profile_Rlayout"
        android:layout_alignBaseline="@+id/name_of_fragment"/>


    <RelativeLayout
        android:id="@+id/profile_Rlayout"
        android:layout_width="160pt"
        android:layout_height="120pt"
        android:background="@drawable/square_clear"
        android:layout_below="@+id/name_of_fragment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/image_of_person"
            android:layout_width="70pt"
            android:layout_height="70pt"
            android:src="@drawable/avatar"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/name_of_person"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:fontFamily="@font/righteous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_of_person"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/old_of_person"
            android:text="@string/or"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:fontFamily="@font/righteous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_of_person"
            android:layout_marginTop="3dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/city_of_person"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:fontFamily="@font/righteous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/old_of_person"
            android:layout_marginTop="3dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/my_dog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moj_pes"
        android:fontFamily="@font/righteous"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_below="@id/profile_Rlayout"
        android:layout_alignLeft="@id/dog_profile_layout"
        />

    <RelativeLayout
        android:id="@+id/dog_profile_layout"
        android:layout_width="160pt"
        android:layout_height="50pt"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/square_clear"
        android:layout_below="@id/my_dog">

        <ImageView
            android:id="@+id/dog_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_image_24dp"
            />
        <TextView
            android:id="@+id/name_of_dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dog_image"
            android:text="@string/meno_psika"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            />
        <TextView
            android:id="@+id/breed_of_dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dog_image"
            android:layout_below="@+id/name_of_dog"
            android:text="@string/rasa_psika"
            android:textColor="@color/colorPrimaryDark"
            />
        <TextView
            android:id="@+id/dangerous_dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dog_image"
            android:layout_below="@+id/breed_of_dog"
            android:text="@string/nebezpecnyano_nie"
            android:textColor="@color/colorPrimaryDark"
            />
        <TextView
            android:id="@+id/dog_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dog_image"
            android:layout_below="@+id/dangerous_dog"
            android:text="@string/adresapsika"
            android:textColor="@color/colorPrimaryDark"
            />

    </RelativeLayout>

    <ImageView
        android:id="@+id/add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_circle_24dp"
        android:layout_below="@+id/dog_profile_layout"
        android:layout_alignLeft="@id/dog_profile_layout"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/text_for_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pridatpoznamku"
        android:layout_toEndOf="@id/add_note"
        android:layout_below="@id/dog_profile_layout"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:textSize="17sp"
        android:textColor="@color/colorAccent"
        />
</RelativeLayout>