<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_arrow_back_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/righteous"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="10pt"/>
    </Toolbar>

    <TextView
        android:id="@+id/register_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10pt"
        android:layout_below="@+id/register_toolbar"
        android:fontFamily="@font/righteous"
        android:text="@string/registracia"
        android:textColor="@color/colorAccent"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/register_rlayout"
        android:layout_width="140pt"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10pt"
        android:background="@drawable/square_clear">

        <TextView
            android:id="@+id/register_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            android:layout_centerHorizontal="true"
            android:text="@string/meno_a_priezvisko"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name_and_surname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_text2"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:inputType="text"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/register_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_and_surname"
            android:layout_marginTop="3pt"
            android:layout_centerHorizontal="true"
            android:text="@string/e_mail"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_text3"
            android:layout_centerHorizontal="true"
            android:autoLink="email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/register_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="3pt"
            android:layout_centerHorizontal="true"
            android:text="@string/heslo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_text4"
            android:layout_centerHorizontal="true"
            android:password="true"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/register_text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="3pt"
            android:layout_centerHorizontal="true"
            android:text="@string/potvrd_heslo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/re_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_text5"
            android:layout_centerHorizontal="true"
            android:password="true"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/register_text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/re_password"
            android:layout_marginTop="3pt"
            android:layout_centerHorizontal="true"
            android:text="@string/cislo_znamky_vasho_psa"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/number_of_his_dog"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_text6"
            android:layout_centerHorizontal="true"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/register_text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_of_his_dog"
            android:layout_marginBottom="10pt"
            android:layout_centerHorizontal="true"
            android:text="@string/nepovinny_daj"
            android:textSize="12sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/enter_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/register_rlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/customenterbutton"
        android:fontFamily="@font/righteous"
        android:text="@string/zaregistruj"
        android:textColor="@android:color/white" />


</RelativeLayout>