<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_of_app"
                android:layout_width="60pt"
                android:layout_height="60pt"
                android:src="@drawable/logo_dark_small"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo_of_app"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/about_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popis_apky"
                android:layout_below="@+id/appName"
                android:padding="15dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/creators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_text2"
                android:layout_marginTop="0dp"
                android:text="@string/creators"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/image_of_creator1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/creators"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5pt"
                android:src="@drawable/creator1" />

            <TextView
                android:id="@+id/name_of_creator1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_of_creator1"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2pt"
                android:text="@string/igor_lengel"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/about_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_of_creator1"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15pt"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10pt"
                android:padding="2pt"
                android:text="@string/o_zakladatelovi"
                android:textStyle="italic" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>